# FEM2

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/FEM2/: fem.py  utils.py
tests/: test_fem.py
tutorial/: tutorial.ipynb
