[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FEM2"
version = "0.0.0"
authors = [
  { name="Mohamad Rahimi", email="mr-rahimi@outlook.com" },
]
description = "FEM2 workflow"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "scipy==1.12.0"
]

[project.urls]
"Homepage" = "https://github.com/mrahimi74/FEM2"
"Bug Tracker" = "https://github.com/mrahimi74/FEM2/issues"